piccola correzione paste